<resources>
    <string name="app_name">PersonasMaterialDiplomado</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="mensaje_guardado">guardado exitosamente</string>
    <string name="mensaje_modificado">Modificado exitosamente</string>
    <string name="cedula">Cedula</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="informacion">Informacion</string>
    <string name="sexo">Sexo</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">Desea liminar a esta persona</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="no_vacio_error">Este campo no puede ser vacio</string>
    <string name="persona_existente_error">ya existe una persona con la misma cedula</string>
    <string name="modificarPersona">ModificarPersona</string>
    <string name="modificar_persona">Modificar Persona</string>
    <string name="cancelar">Cancelar</string>

</resources>
